--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Todo List</title>
     <script src="node_modules/vue/dist/vue.js"></script>
 </head>
 <body>
-    
+    <div id="app">
+        {{message}}
+    </div>
+    <script src="js/app.js"></script>
 </body>
 </html>
