--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Todo List</title>
+    <!-- <title>Todo List</title> -->
+    <titulo></titulo>  
     <link rel="stylesheet" href="css/style.css">
     <script src="node_modules/vue/dist/vue.js"></script>
 </head>
