--- a/index.html
+++ b/index.html
@@ -11,26 +11,8 @@
 <body class="container">
     <div id="app" class="jumbotron">
         <titulo></titulo>  
-        <div class="input-group">
-            <input type="text" placeholder="Enter New Task" v-model="newTask" class="form-control" v-on:keyup.enter="addTask()">
-            <span class="input-group-btn">
-                <button v-on:click="addTask()" class="btn btn-xs btn-primary" >Add</button>
-            </span>
-        </div>
-        <ul class="list-group">
-            <li v-for="(task, index) of tasks" class="list-group-item"  v-bind:class="{finished: task.finished}">
-                {{task.text}}
-                <span class="float-right">
-                    <button type="button" class="btn btn-success" v-show="!task.finished"  v-on:click="task.finished = !task.finished">
-                            <i class="fas fa-check"></i>
-                    </button>
-
-                    <button type="button" class="btn btn-danger" v-show="!task.finished" v-on:click="deleteTask(index)">
-                            <i class="fas fa-trash-alt"></i>
-                    </button>
-                </span>
-            </li>
-        </ul>
+        <nueva-tarea></nueva-tarea>
+        <lista-de-tarea></lista-de-tarea>
     </div>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
